--- a/src/components/shared/TreeView.css
+++ b/src/components/shared/TreeView.css
@@ -38,10 +38,10 @@
 
 @media (forced-colors: active) {
   .treeView {
-    --internal-row-toggle-button-color: ButtonText;
-    --internal-row-toggle-button-active-color: SelectedItem;
-    --internal-selected-row-toggle-button-color: SelectedItemText;
-    --internal-selected-row-toggle-button-active-color: ButtonText;
+    --internal-row-toggle-button-color: ButtonText !important;
+    --internal-row-toggle-button-active-color: SelectedItem !important;
+    --internal-selected-row-toggle-button-color: SelectedItemText !important;
+    --internal-selected-row-toggle-button-active-color: ButtonText !important;
   }
 }
 
